<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="button_popular_movies">POPULAR MOVIES</string>
    <string name="button_stock_hawk">STOCK HAWK</string>
    <string name="button_build_it_bigger">BUILD IT BIGGER</string>
    <string name="button_make_your_app_material">MAKE YOUR APP MATERIAL</string>
    <string name="button_go_ubiquitous">GO UBIQUITOUS</string>
    <string name="button_capstone">CAPSTONE</string>
</resources>
