<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.chetan.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/button_color"
        android:text="My Nanodegree Apps!!"
        android:layout_gravity="center"/>
    <Button
        android:textSize="9sp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button_popular_movies"
        android:layout_gravity="center"
        android:onClick="sendPopularMovies"
        android:background="@color/button_color"
        android:textColor="@color/color_button_text"
        android:layout_marginBottom="4dp"
        />
    <Button
        android:onClick="sendStockHawk"
        android:textColor="@color/color_button_text"
        android:layout_width="150dp"
        android:textSize="9sp"
        android:layout_height="wrap_content"
        android:text="@string/button_stock_hawk"
        android:layout_gravity="center"
        android:background="@color/button_color"

        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        />
    <Button
        android:layout_width="150dp"
        android:textSize="9sp"
        android:layout_height="wrap_content"
        android:text="@string/button_build_it_bigger"
        android:layout_gravity="center"
        android:background="@color/button_color"
        android:textColor="@color/color_button_text"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:onClick="sendBuilItBigger"
        android:padding="8dp"/>
    <Button
        android:layout_marginBottom="4dp"
        android:textColor="@color/color_button_text"
        android:layout_marginTop="4dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="9sp"
        android:text="@string/button_make_your_app_material"
        android:layout_gravity="center"
        android:background="@color/button_color"
        android:padding="8dp"
        android:onClick="sendMakeYourAppMaterial"/>
    <Button
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button_go_ubiquitous"
        android:textSize="9sp"
        android:layout_gravity="center"
        android:background="@color/button_color"
        android:textColor="@color/color_button_text"
        android:onClick="sendGoUbiquitous"/>
    <Button
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:layout_width="150dp"
        android:textSize="9sp"
        android:layout_height="wrap_content"
        android:text="@string/button_capstone"
        android:onClick="sendCapstone"
        android:layout_gravity="center"
        android:background="@color/button_color"
        android:textColor="@color/color_button_text"/>

</LinearLayout>
